Fixed the large whitespace on page

--- a/src/main/webapp/css/forkpin.css
+++ b/src/main/webapp/css/forkpin.css
@@ -8,7 +8,7 @@
     z-index: 300;
     height: 266px;
     width: 416px;
-    margin: 0 auto;
+    margin: 0 auto -430px;
     background: #fff;
     position: relative;
     top: -422px;
